--- a/css/styles.css
+++ b/css/styles.css
@@ -252,7 +252,7 @@ a{
 
 .newsletter{
     width: 100%;
-    background-image: url(/img/background/1.png);
+    background-image: url(../img/background/1.png);
     background-size: cover;
     background-repeat: no-repeat;
     padding: 120px 0;
